# InteractiveBinaryProcessing

./: .gitignore  CMakeLists.txt  InteractiveBinaryProcessing.sln  README.md
InteractiveBinaryProcessing/: InteractiveBinaryProcessing.cpp  InteractiveBinaryProcessing.vcxproj  InteractiveBinaryProcessing.vcxproj.filters  x-script.ibp  x.ibp
include/: Common.ixx  Interpreter.ixx  LibIBP.ixx
